--- a/services/ReverseProxy/nginx.conf
+++ b/services/ReverseProxy/nginx.conf
@@ -14,7 +14,7 @@ http {
     }
 
     location / {
-      proxy_pass http://frontend-service/;
+      proxy_pass http://frontend-service;
     }
   }
 }
